--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -5,38 +5,38 @@
     <string name="cannot_share_empty_text">Nem létező szöveget nem lehet megosztani</string>
     <string name="simple_note">Egyszerű Jegyzet</string>
     <string name="new_note">Új jegyzet hozzáadása</string>
-    <string name="no_title">Adj címet a jegyzetednek</string>
-    <string name="title_taken">Egy jegyzet ugyanilyen címmel már létezik</string>
+    <string name="no_title">Nevezd el a jegyzetet</string>
+    <string name="title_taken">Ilyen nevű jegyzet már van</string>
     <string name="open_note">Jegyzet megnyitása</string>
     <string name="delete_note">Jegyzet törlése</string>
     <string name="delete_note_prompt_title">Jegyzet törlése</string>
-    <string name="delete_note_prompt_message">Biztos, hogy törlöd a(z) \"%1$s\" című jegyzetet?</string>
-    <string name="pick_a_note">Válassz egy jegyzetet</string>
+    <string name="delete_note_prompt_message">Biztosan törlöd a \"%1$s\" jegyzetet?</string>
+    <string name="pick_a_note">Jegyzetválasztás</string>
     <string name="rename_note">Jegyzet átnevezése</string>
     <string name="general_note">Alapértelmezett jegyzet</string>
 
     <!-- File notes -->
-    <string name="open_file">Open file</string>
-    <string name="export_as_file">Export as file</string>
-    <string name="file_too_large">File too large, the limit is 10MB</string>
-    <string name="only_import_file_content">Only import the file content\n(changing the file will not affect the note)</string>
-    <string name="update_file_at_note">Update the file itself at updating the note\n(note gets deleted if file gets deleted, or path changes)</string>
-    <string name="delete_file_itself">Also delete file \"%1$s\"</string>
-    <string name="note_saved_successfully">Note \"%1$s\" saved successfully</string>
-    <string name="display_success_message">Display save success messages</string>
+    <string name="open_file">Fájl megnyitása</string>
+    <string name="export_as_file">Exportálás fájlba</string>
+    <string name="file_too_large">A fájl túl nagy, legfeljebb 10MB lehet</string>
+    <string name="only_import_file_content">Csak a fájl tartalmának importálása\n(a fájl változásai nem látszanak a jegyzetben)</string>
+    <string name="update_file_at_note">A jegyzetbe íráskor a fájlba is írás\n(a jegyzet törlődik ha a fájl törlődik, vagy változik az elérési útvonala)</string>
+    <string name="delete_file_itself">\"%1$s\" fájl is törlődjön</string>
+    <string name="note_saved_successfully">\"%1$s\" nevű jegyzet elmentve</string>
+    <string name="display_success_message">Sikeres mentés üzenetek megjelenítése</string>
 
     <!-- Settings -->
-    <string name="widget_note">A widget-ben használt jegyzet</string>
-    <string name="links_and_emails_clickable">Make links and emails clickable</string>
-    <string name="note_font_size">Betűméret</string>
-    <string name="small">Kis</string>
-    <string name="normal">Átlagos</string>
+    <string name="widget_note">Widgetben használt jegyzet</string>
+    <string name="links_and_emails_clickable">Hivatkozások és e-mail címek felismerése</string>
+    <string name="note_font_size">Jegyzet betűméret</string>
+    <string name="small">Kicsi</string>
+    <string name="normal">Közepes</string>
     <string name="large">Nagy</string>
-    <string name="extra_large">Nagyon nagy</string>
+    <string name="extra_large">Óriási</string>
     <string name="gravity">Igazítottság</string>
-    <string name="left">Balra</string>
-    <string name="center">Középre</string>
-    <string name="right">Jobbra</string>
+    <string name="left">Bal</string>
+    <string name="center">Közép</string>
+    <string name="right">Jobb</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
