--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -83,21 +83,25 @@
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Plánovač - vytvárajte poznámky, zálohy, zoznamy úloh použitím pripomienok</string>
     <string name="app_long_description">
-        ★ Need to take a quick note of something to buy, an address, or a startup idea? Then look no further as this is the simple organizer tool you\'ve been looking for : Simple Notes: To-do list organizer and planner! No complicated setup steps needed, just tap the screen and type in what you came for and create notes, quick lists, checklist or backup for any idea. With your simple personal notebook you can remember anything fast! Shopping for groceries, memorizing your thoughts and easier setting up reminders taking notes has never been easier ★
+        ★ Potrebujete si vytvoriť rýchlu poznámku, aby ste nezabudli niečo kúpiť, adresu, alebo startupový nápad? Práve ste našli najlepŠí organizér, ktorí ste hľadali: Jednoduché poznámky.
 
-        Simple notes planner is quick, simple to use organizer and remarkable planner and it will serve as an invaluable tool and companion, helping you to remember necessary piece of information!
+        Nie sú potrebné žiadne nastavenia, iba začnite písať, čo ste chceli, rýchle zoznamy, zoznamy položiek, zálohy atď. S týmto nástrojom na poznámky nezabudnete na nič. Ani pri nákupoch, ani myšlienkach.
 
-        Our reminder tool allows you to keep track of your duties,create daily checklist for items or ideas with unprecedented simplicity, notability and unrivaled time-saving value. Manage your schedule in a quick and simple manner.
+        Jednoduché poznámky sú rýchlym  jednoduchým organizérom a plánovačom, bude pre vás nenahraditeľným nástrojom a pomocníkom pri pamätaní si všetkého dôležitého.!
 
-        This notebook reminder tool comes with autosave so you will not discard your changes by mistake. It also supports creating multiple independent plain text notes and lists very fast.
+        Náš pripomienkovač vám umožní pamätať si vaše povinnosti, vytvárať denné zoznamy úloh, alebo nápadov. Ide o bezkonkurenčnú jednoduchosť a šetrič času. Spravujte svoj deň týmto jednoduchým spôsobom.
 
-        You can easily access the note and organize your to-do list in no time by using the customizable and resizable widget, which opens the app on tap.
+        Nachádza sa tu aj automatické ukladanie poznámok, nemôže sa teda stať, že niečo zabudnete, alebo neuložíte. Podporuje vytváranie viacerých nezávislých poznámok a zoznamov.
 
-        It is user friendly and contains absolutely no ads or unnecessary permissions - no strings attached. It is fully opensource, provides customizable colors which can be adjusted with quick and fast tweaking.
+        Ku poznámkam sa viete dostať jednoducho pomocou prispôsobiteľného widgetu s meniteľnou veľkosťou a farbami, ktorý otvorí po kliknutí apku.
 
-        <b>Simple Notes: To-do list organizer and planner</b> is the best item organizer and list planner you can use with no ads. If you need a high quality organizer for a quick and goodnotes, a reliable and user friendly reminder that is truly simple to use, download our app right now :) Have your own personal notebook in your pocket every day and have a backup planner so you will not have to worry about forgetting an important meeting or your shopping list :).
+        Obsahuje prívetivé používateľské prostredie úplne bez reklám a nepotrebných oprávnení. Je open source, obsahuje meniteľné farby, pomocou ktorých si viete rýchlo prispôsobiť apku.
 
-        It comes with material design and dark theme by default, provides great user experience for easy usage. The lack of internet access gives you more privacy, security and stability than other apps.
+        <b>Jednoduché poznámky</b> sú najlepším organizérom a plánovačom bez reklám. Ak potrebujete vysoko kvalitný organizér pre rýchlu tvorbu poznámok s príjemným používateľským prostredím, stiahnite si túto apku teraz.
+
+        Majte váš vlastný súkromný poznámkový blok vo vrecku na každodenné použitie, aby ste nezabudli na nič dôležité.
+
+        Táto apka je založená na Material dizajne a má prednastavenú tmavú tému, poskytuje výbornú používateľskú skúsenosť pre ľahké používanie. Chýbajúci prístup k internetu garantuje lepšie súkromie, bezpečnosť a stabilitu ako ostatné apky.
 
         Neobsahuje žiadne reklamy a nepotrebné oprávnenia. Je opensource, poskytuje možnosť zmeny farieb.
 
