--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -25,7 +25,7 @@
     <string name="lock_note">Zamknout poznámku</string>
     <string name="unlock_note">Odemknout poznámku</string>
     <string name="unlock_notes">Unlock notes</string>
-    <string name="found_locked_notes_info">The following notes are locked. You can either unlock them one by one or tap \"OK\" to skip exporting locked notes.</string>
+    <string name="found_locked_notes_info">The following notes are locked. You can either unlock them one by one or skip exporting them.</string>
     <string name="note_content_locked">Obsah této poznámky je uzamčen.</string>
     <string name="show_content">Zobrazit obsah</string>
     <string name="locking_warning">UPOZORNĚNÍ: Pokud zapomenete heslo k poznámce, už ji nebudete schopni obnovit nebo získat přístup k jejímu obsahu.</string>
